tests/ui/nll/trait-associated-constant.stderr
error[E0207]: the lifetime parameter `'c` is not constrained by the impl trait, self type, or predicates
  --> $DIR/trait-associated-constant.rs:20:18
   |
LL | impl<'a: 'b, 'b, 'c> Anything<'a, 'b> for FailStruct {
   |                  ^^ unconstrained lifetime parameter

error: aborting due to previous error

For more information about this error, try `rustc --explain E0207`.
